HW/HW1/results/steinaglejusten_results.txt
steinaglejusten\Segment.java:9: error: cannot find symbol
		this.a = new point(0,0);
		             ^
  symbol:   class point
  location: class Segment
steinaglejusten\Segment.java:10: error: cannot find symbol
		this.b = new point(0,0);
		             ^
  symbol:   class point
  location: class Segment
2 errors
